--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,13 @@
   </head>
 
   <body>
+    <% if logged_in? %>
+      <%= render 'shared/header' %>
+    <% else %>  
+      <%= render 'shared/before_logged_in_header' %>
+    <% end %>
+    <%= render 'shared/flash_message' %>
     <%= yield %>
+    <%= render 'shared/footer' %>
   </body>
 </html>
