--- a/app/views/shared/_before_logged_in_header.html.erb
+++ b/app/views/shared/_before_logged_in_header.html.erb
@@ -1,9 +1,18 @@
 <header class='before_logged_in_header'>
-  <div class='container'>
-    <div class='row'>
-      <div class='col-md-6 d-flex align-items-start'>
-        <%= image_tag 
-      </div>
-    </div>
-  </div>
+  <nav class="navbar navbar-expand-lg navigation navbar-light bg-light">
+    <%=link_to root_path, class: "navbar-brand" do %>
+      <%#= image_tag "#" %>
+    <% end %>
+    <div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+    Dropdown button
+  </button>
+  <ul class="dropdown-menu">
+    <li><a class="dropdown-item" href="#">Action</a></li>
+    <li><a class="dropdown-item" href="#">Another action</a></li>
+    <li><a class="dropdown-item" href="#">Something else here</a></li>
+  </ul>
+</div>
+
+  </nav>
 </header>
