レイアウト・ログイン機能完了

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
-<footer id='footer' class='footer-bottom'>
+<footer id='footer' class='footer-bottom mt-5'>
   <div class='container'>
     <div class='row'>
-      <div class='col-sm-8 col-12'>
+      <div class='col-sm-8 col-12 offset-sm-4'>
         <div class='copyright'>
           <p>Copyright</p>
         </div>
