--- a/app/views/shared/_before_logged_in_header.html.erb
+++ b/app/views/shared/_before_logged_in_header.html.erb
@@ -1,18 +1,20 @@
 <header class='before_logged_in_header'>
-  <nav class="navbar navbar-expand-lg navigation navbar-light bg-light">
-    <%=link_to root_path, class: "navbar-brand" do %>
-      <%#= image_tag "#" %>
-    <% end %>
-    <div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-    Dropdown button
-  </button>
-  <ul class="dropdown-menu">
-    <li><a class="dropdown-item" href="#">Action</a></li>
-    <li><a class="dropdown-item" href="#">Another action</a></li>
-    <li><a class="dropdown-item" href="#">Something else here</a></li>
-  </ul>
-</div>
-
-  </nav>
+<nav class="navbar navbar-expand-lg bg-body-tertiary ps-5 navbar bg-dark border-bottom border-bottom-dark" data-bs-theme="dark">
+  <div class="container-fluid mt-3">
+    <a class="navbar-brand" href="/"><h1>タスク管理アプリ</h1></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto me-5">
+        <li class="nav-item ms-3">
+          <%= link_to 'ログイン', new_user_sessions_path, class: 'link-light' %>
+        </li>
+        <li class="nav-item ms-3">
+          <%= link_to '新規作成', new_user_path, class: 'link-light' %>
+        </li>  
+      </ul>
+    </div>
+  </div>
+</nav>
 </header>
