タスク機能完了

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -27,7 +27,7 @@
       <% end %>
     </div>
     <div class="login_link d-flex justify-content-center">
-      <%= link_to 'ログインページへ', new_user_sessions_path, class: 'link-body-empasis' %>
+      <%= link_to 'ログインページへ', new_user_sessions_path, class: 'link-body-emphasis' %>
     </div>  
   </div>
 </div>
