--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,14 +1,14 @@
 <header class='before_logged_in_header'>
 <nav class="navbar navbar-expand-lg bg-body-tertiary ps-5 navbar bg-dark border-bottom border-bottom-dark" data-bs-theme="dark">
   <div class="container-fluid mt-3">
-    <a class="navbar-brand" href="#"><h1>タスク管理アプリ</h1></a>
+    <a class="navbar-brand" href='/'><h1>タスク管理アプリ</h1></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto me-5">
         <li class="nav-item me-5">
-          <%= link_to 'タスク一覧', '#', class: 'link-light link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover', style: 'font-size: 20px;' %>
+          <%= link_to 'タスク一覧', tasks_path, class: 'link-light link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover', style: 'font-size: 20px;' %>
         </li>
         <li class="nav-item me-5">
           <%= link_to 'カレンダー 一覧', '#', class: 'link-light link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover', style: 'font-size: 20px;' %>
