--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,7 +5,7 @@
     </div>
     <div class='col-md-4'>
       <div class="d-grid gap-2 col-6 mx-auto">
-        <button class="btn btn-secondary" type="button"><%= link_to '新規作成', new_task_path, class:'link-light' %></button>
+        <button class="btn btn-secondary" type="button"><%= link_to t('.new_create'), new_task_path, class:'link-light' %></button>
       </div>
     </div>   
   </div>
