--- a/app/views/shared/_before_logged_in_header.html.erb
+++ b/app/views/shared/_before_logged_in_header.html.erb
@@ -8,10 +8,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto me-5">
         <li class="nav-item ms-3">
-          <%= link_to 'ログイン', new_user_sessions_path, class: 'link-light' %>
+          <%= link_to t('header.login'), new_user_sessions_path, class: 'link-light' %>
         </li>
         <li class="nav-item ms-3">
-          <%= link_to '新規作成', new_user_path, class: 'link-light' %>
+          <%= link_to t('header.new_create'), new_user_path, class: 'link-light' %>
         </li>  
       </ul>
     </div>
