--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,9 +1,9 @@
 <tr>
   <td><%= task.name %></td>
   <td><%= task.user.full_name %></td>
-  <td><%= task.state %></td>
+  <td><%= task.state_i18n %></td>
   <td><%= l task.limit_date, format: :long %></td>
-  <td><button type="button" class="btn btn-primary"><%= link_to '詳細', task_path(task), class: 'link-light' %></button></td>
-  <td><button type="button" class="btn btn-success"><%= link_to '編集', edit_task_path(task), class: 'link-light' %></button></td>
-  <td><button type="button" class="btn btn-danger"><%= link_to '削除', task_path(task), date: { turbo_method: :ddelete }, class: 'link-light' %></button></td>
+  <td><button type="button" class="btn btn-primary"><%= link_to t('default.show'), task_path(task), class: 'link-light' %></button></td>
+  <td><button type="button" class="btn btn-success"><%= link_to t('default.edit'), edit_task_path(task), class: 'link-light' %></button></td>
+  <td><button type="button" class="btn btn-danger"><%= link_to t('default.delete'), task_path(task), date: { turbo_method: :delete }, class: 'link-light' %></button></td>
 </tr>
