--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -7,8 +7,8 @@
   </div>
   <div class='row'>
     <div class='col-md-10 d-flex mx-auto mt-4'>
-      <%= link_to 'タスク一覧', tasks_path, class: 'btn btn-secondary me-2' %>
-      <%= link_to '詳細', task_path(@task), class: "btn btn-primary" %>
+      <%= link_to t('default.index'), tasks_path, class: 'btn btn-secondary me-2' %>
+      <%= link_to t('default.show'), task_path(@task), class: "btn btn-primary" %>
     </div>
   </div>
 </div>
