--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -7,7 +7,7 @@
   </div>
   <div class='row'>
     <div class="col-md-10 mx-auto mt-4">
-      <%= link_to 'タスク一覧', tasks_path, class: "link-body-emphasis" %> 
+      <%= link_to t('.index'), tasks_path, class: "link-body-emphasis" %> 
     </div>
   </div>
 </div>
