--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -18,8 +18,8 @@
   </div>
   <div class="row mt-3">
     <div class="col-md-8">
-      <%= link_to '編集', edit_task_path(@task), class: 'btn btn-success me-3' %>
-      <%= link_to '削除', task_path(@task), class: 'btn btn-danger', date: { turbo_method: :delete } %>
+      <%= link_to t('default.edit'), edit_task_path(@task), class: 'btn btn-success me-3' %>
+      <%= link_to t('default.delete'), task_path(@task), class: 'btn btn-danger', date: { turbo_method: :delete } %>
     </div>
   </div>
 </div>
