--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,3 @@
 @import 'bootstrap/scss/bootstrap';
-@import 'task.scss';
+@import 'bootstrap-icons/font/bootstrap-icons';
+@import "simple_calendar";
