--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,18 +11,18 @@
           <%= link_to t('header.task_index'), tasks_path, class: 'link-light link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover', style: 'font-size: 20px;' %>
         </li>
         <li class="nav-item me-5">
-          <%= link_to t('header.calender_index'), '#', class: 'link-light link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover', style: 'font-size: 20px;' %>
+          <%= link_to t('header.calender_index'), calendars_path, class: 'link-light link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover', style: 'font-size: 20px;' %>
         </li>
       </ul>
       <div class="dropdown me-5">
         <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-          <%= image_tag 'sakana.jpg', class: "rounded-circle", size: '40x40' %>
+          <%= image_tag current_user.decorate.image_resize(40, 40), class: "rounded-circle", size: '40x40' %>
         </a>  
         <ul class="dropdown-menu dropdown-menu-right">
-          <li><%= link_to t('header.profile'), "#", class: "dropdown-item" %></li>
-          <li><%= link_to t('header.edite_profile'), "#", class: "dropdown-item" %></li>
+          <li><%= link_to t('header.profile'), profile_path, class: "dropdown-item" %></li>
+          <li><%= link_to t('header.edite_profile'), edit_profile_path, class: "dropdown-item" %></li>
           <li><hr class="dropdown-divider"></li>
-          <li><%= link_to t('header.logout'), user_sessions_path, class: "dropdown-item", date: { turbo_method: :delete } %></li>
+          <li><%= button_to t('header.logout'), user_sessions_path, class: "dropdown-item", method: :delete %></li>
         </ul>
       </div>  
     </div>
