--- a/app/views/tasks/_task_form.html.erb
+++ b/app/views/tasks/_task_form.html.erb
@@ -8,8 +8,8 @@
     <%= f.text_area :body, class: 'form-control' %>
   </div>
   <div class="mt-3 mb-4">
-    <%= f.label :limit_date, class: 'form-label' %>
-    <%= f.datetime_field :limit_date, class: 'form-control', min: Time.zone.now.strftime("%Y-%m-%dT%H%M") %>
+    <%= f.label :start_time, class: 'form-label' %>
+    <%= f.datetime_field :start_time, class: 'form-control', min: Time.zone.now.strftime("%Y-%m-%dT%H%M") %>
   </div>
   <%= f.submit nil, class: "btn btn-outline-primary" %>
 <% end %>     
