--- a/app/views/tasks/_task_form.html.erb
+++ b/app/views/tasks/_task_form.html.erb
@@ -7,6 +7,10 @@
     <%= f.label :body, class: 'form-label' %>
     <%= f.text_area :body, class: 'form-control' %>
   </div>
+  <div class="my-3">
+    <%= f.label :state, class: 'form-label' %>
+    <%= f.select :state, Task.states_i18n.invert, class: 'form-control' %>
+  </div>
   <div class="mt-3 mb-4">
     <%= f.label :start_time, class: 'form-label' %>
     <%= f.datetime_field :start_time, class: 'form-control', min: Time.zone.now.strftime("%Y-%m-%dT%H%M") %>
