--- a/app/views/simple_calendar/_month_calendar.html.erb
+++ b/app/views/simple_calendar/_month_calendar.html.erb
@@ -1,15 +1,16 @@
 <div class="simple-calendar">
-  <div class="calendar-heading">
-    <time datetime="<%= start_date.strftime('%Y-%m') %>" class="calendar-title"><%= t('date.month_names')[start_date.month] %> <%= start_date.year %></time>
-
+  <div class="calendar-heading my-4">
+    <h2 class="mb-3"><i class="bi bi-calendar-event me-2"></i>タスクカレンダー</h2>
     <nav>
-      <%= link_to t('simple_calendar.previous', default: 'Previous'), calendar.url_for_previous_view %>
-      <%= link_to t('simple_calendar.today', default: 'Today'), calendar.url_for_today_view %>
-      <%= link_to t('simple_calendar.next', default: 'Next'), calendar.url_for_next_view %>
-    </nav>
+      <div class="d-flex align-items-end">
+        <h5><i class="bi bi-chevron-double-left"></i><%= link_to t('simple_calendar.previous'), calendar.url_for_previous_view, class: "link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover" %></h5>
+        <h3><span class="mx-3"><time datetime="<%= start_date.strftime('%Y-%m') %>" class="calendar-title"><%= t('date.month_names')[start_date.month] %> <%= start_date.year %></time></span></h3>
+        <h5><%= link_to t('simple_calendar.next'), calendar.url_for_next_view, class: "link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover" %><i class="bi bi-chevron-double-right"></i></h5>
+        <%= link_to t('tasks.index.new_create'), new_task_path, class: "btn btn-secondary ms-3" %>
+      </div>
   </div>
 
-  <table class="table table-striped">
+  <table class="table">
     <thead>
       <tr>
         <% date_range.slice(0, 7).each do |day| %>
