--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td><%= task.name %></td>
   <td><%= task.user.full_name %></td>
-  <td><%= task.state_i18n %></td>
+  <td class="<%= task_state_class(task.state) %>"><%= task.state_i18n %></td>
   <td><%= l task.start_time, format: :long %></td>
   <td><button type="button" class="btn btn-primary"><%= link_to t('default.show'), task_path(task), class: 'link-light' %></button></td>
   <td><button type="button" class="btn btn-success"><%= link_to t('default.edit'), edit_task_path(task), class: 'link-light' %></button></td>
