--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -4,7 +4,7 @@
       <h1>タスク詳細</h1>
       <div class="d-flex my-3">
         <h3><%= @task.name %></h3>
-        <div class="bg-primary-subtle border border-primary-subtle rounded-3 ms-3"><p class="text-primary-emphasis m-2"><%= @task.state %></p></div>
+        <div class="bg-primary-subtle rounded-3 ms-3 <%= task_state_class(@task.state) %>"><p class="m-2 <%= task_state_class(@task.state) %>"><%= @task.state_i18n %></p></div>
       </div>
       <div class="date">
         <h5>期限</h5>
