--- a/app/views/admin/shared/_sidebar.html.erb
+++ b/app/views/admin/shared/_sidebar.html.erb
@@ -2,8 +2,8 @@
   <div class="bg-dark text-white p-3" style="width: 200px; height: 90vh;">
     <h5>let,s管理</h5>
     <ul class="nav flex-column">
-      <li class="nav-item"><%= link_to 'ユーザー一覧', '#', class: "link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" %></li>
-      <li class="nav-item"><%= link_to 'タスク一覧', '#', class: "link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" %></li>
+      <li class="nav-item"><%= link_to t('default.users'), admin_users_path, class: "link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" %></li>
+      <li class="nav-item"><%= link_to t('default.index'), '#', class: "link-light link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover" %></li>
     </ul>
   </div>
 </div>
