管理画面完成

--- a/app/views/admin/shared/_header.html.erb
+++ b/app/views/admin/shared/_header.html.erb
@@ -5,7 +5,7 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidth" aria-expanded="false" aria-controls="collapseWidth">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand ms-3" href='/'><h1>管理画面</h1></a>
+      <a class="navbar-brand ms-3" href='/admin'><h1>タスク管理アプリ</h1></a>
     </div>  
     <div class="navbar-nav">
       <div class="nav-item">
