--- a/app/views/admin/users/_user.html.erb
+++ b/app/views/admin/users/_user.html.erb
@@ -5,5 +5,5 @@
   <td><%= user.email %></td>
   <td><button type="button" class="btn btn-primary"><%= link_to t('default.show'), admin_user_path(user), class: 'link-light' %></button></td>
   <td><button type="button" class="btn btn-success"><%= link_to t('default.edit'), edit_admin_user_path(user), class: 'link-light' %></button></td>
-  <td><button type="button" class="btn btn-danger"><%= link_to t('default.delete'), admin_user_path(user), date: { turbo_method: :delete }, class: 'link-light' %></button></td>
+  <td><%= button_to t('default.delete'), admin_user_path(user), method: :delete, class: 'btn btn-danger' %></td>
 </tr>
