--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -9,10 +9,10 @@
       <table class="table">
         <thead>
          <tr>
-          <th scope="col">ID</th>
-          <th scope="col">フルネーム</th>
-          <th scope="col">Role</th>
-          <th scope="col">Email</th>
+          <th scope="col"><%= User.human_attribute_name(:id) %></th>
+          <th scope="col"><%= User.human_attribute_name(:full_name) %></th>
+          <th scope="col"><%= User.human_attribute_name(:role) %></th>
+          <th scope="col"><%= User.human_attribute_name(:password) %></th>
           <th scope="col"></th>
          </tr>
         </thead>
