--- a/app/views/top_page/top.html.erb
+++ b/app/views/top_page/top.html.erb
@@ -1,7 +1,9 @@
 <div class="container">
   <div class="row pt-5">
     <div class="col-sm-10 offset-sm-2">
-      <h1>アプリケーション機能<h1>
+      <h1>アプリケーション機能</h1>
+      <p class="fs-5">このアプリケーションでは、タスクの管理が出来ます。<br>
+        カレンダーでタスクの日時の確認もできます。</p>
     </div>
   </div>
 </div>
